docs: update api models
